# docs/swagger.json
@@ -437,19 +437,10 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "Follower User ID",
+                        "description": "User ID",
                         "name": "userID",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "description": "User id",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/main.FollowUser"
-                        }
                     }
                 ],
                 "responses": {
@@ -492,15 +483,6 @@
                         "name": "userID",
                         "in": "path",
                         "required": true
-                    },
-                    {
-                        "description": "User id",
-                        "name": "user",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/main.FollowUser"
-                        }
                     }
                 ],
                 "responses": {
@@ -531,14 +513,6 @@
                     "type": "string",
                     "maxLength": 72,
                     "minLength": 3
-                }
-            }
-        },
-        "main.FollowUser": {
-            "type": "object",
-            "properties": {
-                "user_id": {
-                    "type": "integer"
                 }
             }
         },
